--- a/src/App.css
+++ b/src/App.css
@@ -102,15 +102,20 @@ main {
   text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
 }
 
+.hiLow {
+  color: #FFF;
+  font-size: 25px;
+  font-weight: 400;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+}
+
 .convert {
   position: relative;
   display: inline-block;
   margin: 30px auto;
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 16px;
-
   padding: 15px 0px;
-
   color: #FFF;
   font-size: 50px;
   font-weight: 600;
